# robotswarmsimulator

./: .cproject  .gitignore  .project  CMakeLists.txt  doxygen_cfg  header.doxy
documentation/: CMakeLists.txt  doxygen.conf.in
documentation/architecture/: architecture-document.tex  bibliography.tex  chapter_reference.tex  chapter_whatitis.tex
documentation/users_guide/: beginning.tex  create_simulation.tex  gnuplot.tex  inputfile_specification.tex  scaling_tests.tex  statistics.tex  users_guide.tex
luabind/: CMakeLists.txt
luabind/luabind/: class.hpp  table_policy.hpp
src/: CMakeLists.txt  RobotSwarmSimulator.cc  RobotSwarmSimulator.cpp  config.h.in  testheader.cc  testheader.h  testheaderB.cc  testheaderB.h
src/ActivationSequenceGenerators/: activation_sequence_generator.h  asynchronous_asg.cc  asynchronous_asg.h  atomic_semisynchronous_asg.cc  atomic_semisynchronous_asg.h  fair_atomic_semisynchronous_asg.cc  fair_atomic_semisynchronous_asg.h  synchronous_asg.cc  synchronous_asg.h  synchronous_asg_wm.cc  synchronous_asg_wm.h
src/ComputationalGeometry/: ch_algorithms.cc  ch_algorithms.h  coord_converter.cc  coord_converter.h  diameter.cc  diameter.h  gdiam.cc  gdiam.h  geometry.cc  geometry.h  miniball.cc  miniball.h  miniball_b.cc  miniball_b.h  miniball_point.h  misc_algorithms.cc  misc_algorithms.h  point_algorithms.cc  point_algorithms.h  points_sepplane.cc  points_sepplane.h  tp_algorithms.h
src/EventHandlers/: acceleration_event_handler.h  collision_position_request_handler.cc  collision_position_request_handler.h  color_change_request_handler.cc  color_change_request_handler.h  event_handler.cc  event_handler.h  exact_acceleration_event_handler.cc  exact_acceleration_event_handler.h  exact_full_event_handler.h  exact_marker_event_handler.cc  exact_marker_event_handler.h  exact_position_event_handler.cc  exact_position_event_handler.h  exact_velocity_event_handler.cc  exact_velocity_event_handler.h  full_event_handler.h  insert_edge_request_handler.cc  insert_edge_request_handler.h  marker_change_request_handler.cc  marker_change_request_handler.h  marker_request_handler.cc  marker_request_handler.h  message_request_handler.cc  message_request_handler.h  position_event_handler.cc  position_event_handler.h  remove_edge_request_handler.cc  remove_edge_request_handler.h  remove_message_request_handler.cc  remove_message_request_handler.h  request_handler.cc  request_handler.h  send_message_request_handler.cc  send_message_request_handler.h  type_change_request_handler.cc  type_change_request_handler.h  unreliable_event_handler.h  vector_modifier.h  vector_randomizer.cc  (+4 more)
src/Events/: compute_event.cc  compute_event.h  event.cc  event.h  handle_requests_event.cc  handle_requests_event.h  look_event.cc  look_event.h  world_modifier_event.cc  world_modifier_event.h
src/Flags/: config.h  gflags.cc  gflags.h  gflags_completions.cc  gflags_reporting.cc
src/Gui/: GeneratorWizard.cc  GeneratorWizard.h  OpenProjectDialog.cc  OpenProjectDialog.h  RSSMainWindow.cc  RSSMainWindow.h  generator_wizard.cc  generator_wizard.h  help_dialog.cc  help_dialog.h  open_project_dialog.cc  open_project_dialog.h  rss_gl_widget.cc  rss_gl_widget.h  rss_main_window.cc  rss_main_window.h
src/Logger/: logging.cc  logging.h
src/LuaAlgorithms/: chainhamilton.lua  circle.lua  cog.lua  lattice2d.lua
src/Model/: box.cc  box.h  box_identifier.cc  box_identifier.h  directed_edge.cc  directed_edge.h  edge.cc  edge.h  edge_identifier.cc  edge_identifier.h  identifier.cc  identifier.h  marker_identifier.cc  marker_identifier.h  marker_information.cc  marker_information.h  message.cc  message.h  message_identifier.cc  message_identifier.h  obstacle.cc  obstacle.h  obstacle_identifier.cc  obstacle_identifier.h  robot.cc  robot.h  robot_data.cc  robot_data.h  robot_identifier.cc  robot_identifier.h  sphere.cc  sphere.h  sphere_identifier.cc  sphere_identifier.h  undirected_edge.cc  undirected_edge.h  world_information.cc  world_information.h  world_modifier.cc  world_modifier.h  (+2 more)
src/OpenGL/: GLHeaders.h  GLUHeaders.h  GLUTHeaders.h  PgGLUT.h  gl_headers.h  glext_headers.h  glu_headers.h  glut_headers.h  pg_glut.cc  pg_glut.h
src/ProjectFiles/: miniball.robot  miniball.swarm  miniballasync.swarm  position_handler_cog.swarm  position_handler_cog_async.swarm  projectfile.swarm  velocity_handler_cog.robot
src/Requests/: acceleration_request.h  color_change_request.h  insert_edge_request.h  marker_change_request.h  marker_request.h  message_request.h  position_request.h  remove_edge_request.h  remove_message_request.h  request.cc  request.h  send_message_request.h  type_change_request.h  vector_request.h  velocity_request.h
src/RobotImplementations/: acceleration_cog_robot.cc  acceleration_cog_robot.h  ch_robot.cc  ch_robot.h  cog_robot.cc  cog_robot.h  grid_pull_spin_robot.cc  grid_pull_spin_robot.h  lua_robot.cc  lua_robot.h  miniball_robot.cc  miniball_robot.h  pot_robot.cc  pot_robot.h  pull_spin_robot.cc  pull_spin_robot.h  rndjmp_robot.cc  rndjmp_robot.h  simple_robot.h  tp_algorithm_robot.cc  tp_algorithm_robot.h  velocity_cog_robot.cc  velocity_cog_robot.h
src/SimulationControl/: RobotSwarmSimulator.cc  SimulationControl.cc  glut_gui.cc  glut_gui.cpp  glut_gui.h  gui.cc  gui.h  history.cc  history.h  simulation_control.cc  simulation_control.h  time_point.cc  time_point.h  visualizer.h
src/SimulationKernel/: factories.cc  factories.h  robot_control.cc  robot_control.h  robot_type_robot_control.cc  robot_type_robot_control.h  simulation_kernel.cc  simulation_kernel.h  simulation_listener.h  uniform_robot_control.cc  uniform_robot_control.h
src/Statistics/: numset_stats.cc  numset_stats.h  statistics_data_object.h  stats_calc.cc  stats_calc.h  stats_calc_indata.cc  stats_calc_indata.h  stats_config.cc  stats_config.h  stats_control.cc  stats_control.h  stats_out.cc  stats_out.h  vecset_stats.cc  vecset_stats.h
src/SzenarioGenerator/: circle_formation_generator.cc  circle_formation_generator.h  cluster_formation_generator.cc  cluster_formation_generator.h  formation_generator.h  (+12 more)
(+1174 files in other folders)
